--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,4 @@ crashlytics-build.properties
 
 Assets/Docs/Credentials.cs
 Assets/Docs/Credentials.cs.meta
-.idea/.idea.ChatSandbox/.idea/workspace.xml
-.idea/.idea.ChatSandbox/.idea/vcs.xml
-.idea/.idea.ChatSandbox/.idea/indexLayout.xml
-.idea/.idea.ChatSandbox/.idea/contentModel.xml
+/.idea/
